# spr

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  book.toml  index.html  print.html  release_checklist.md  searchindex.js  searchindex.json  shell.nix  toc.html  toc.js
.github/workflows/: book.yml  release.yml  test.yml
docs/: README.md  SUMMARY.md
docs/reference/: cli.md  configuration.md  how-it-works-simple.md
docs/user/: commit-message.md  create.md  fork.md  installation.md  merge.md  patch.md  setup.md  simple.md  stack.md  update.md
reference/: cli.html  configuration.html  how-it-works-simple.html
spr/: Cargo.toml
spr/src/: config.rs  error.rs  git.rs  github.rs  lib.rs  main.rs  output.rs  utils.rs
spr/src/commands/: amend.rs  close.rs  diff.rs  format.rs  init.rs  land.rs  list.rs  mod.rs
spr/src/gql/: open_reviews.graphql  pullrequest_mergeability_query.graphql
src/: async_memoizer.rs  config.rs  error.rs  executor.rs  future.rs  git.rs  git_remote.rs  github.rs  lib.rs  main.rs  message.rs  output.rs  spr.rs  utils.rs
src/commands/: amend.rs  close.rs  diff.rs  format.rs  init.rs  land.rs  list.rs  mod.rs  patch.rs
src/gql/: pullrequest_query.graphql
user/: commit-message.html  create.html  installation.html  merge.html  patch.html  setup.html  simple.html  stack.html  update.html
