[package]
name = "spr"
version = "1.3.3-beta.1"
authors = ["Sven Over <sven@cord.com>", "Jozef Mokry <jozef@cord.com>"]
description = "Submit pull requests for individual, amendable, rebaseable commits to GitHub"
repository = "https://github.com/getcord/spr"
homepage = "https://github.com/getcord/spr"
license = "MIT"
edition = "2021"
exclude = [".github", ".gitignore"]

[dependencies]
async-compat = "^0.2.1"
async-executor = "^1.4.1"
async-io = "^1.7.0"
async-lock = "^2.4.0"
async-process = "^1.3.0"
clap = { version = "^3.2.6", features = ["derive", "wrap_help"] }
console = "^0.15.0"
dialoguer = "^0.10.1"
futures = "^0.3.21"
futures-lite = "^1.12.0"
git2 = { version = "^0.14.4", default-features = false }
graphql_client = "^0.11.0"
indoc = "^1.0.3"
lazy-regex = "^2.2.2"
octocrab = { version = "^0.16.0", default-features = false, features = ["rustls"] }
reqwest = { version = "^0.11.11", default-features = false, features = ["json", "rustls-tls"] }
serde = "^1.0.136"
textwrap = "0.15.0"
thiserror = "^1.0.30"
unicode-normalization = "^0.1.19"

[dev-dependencies]
smol = "^1.2.5"
