[package]
name = "spr"
version = "1.3.7-beta.1"
authors = ["Sven Over <sp@cedenti.st>", "Jozef Mokry <jozef.mokry@gmail.com>"]
description = "Submit pull requests for individual, amendable, rebaseable commits to GitHub"
repository = "https://github.com/spacedentist/spr"
homepage = "https://github.com/spacedentist/spr"
license = "MIT"
edition = "2021"
exclude = [".github", ".gitignore"]

[dependencies]
bytes = "1.10.1"
clap = { version = "^4.5.45", features = ["derive", "wrap_help"] }
console = "^0.16.0"
dialoguer = "^0.12.0"
futures = "^0.3.31"
futures-lite = "^2.6.1"
git2 = { version = "^0.20.2", default-features = false }
git2-ext = "^0.6.3"
graphql_client = "^0.14.0"
http = "1.3.1"
http-body = "1.0.1"
indoc = "^2.0.6"
lazy-regex = "^3.4.1"
octocrab = { version = "^0.44.1", default-features = false, features = ["opentls", "default-client", "tokio"] }
open = "5.3.2"
secrecy = { version = "0.10.3", default-features = false }
serde = "^1.0.219"
textwrap = "^0.16.2"
thiserror = "^2.0.16"
tokio = { version = "^1.47.1", features = ["macros", "process", "rt-multi-thread", "time"] }
unicode-normalization = "^0.1.24"
