[package]
name = "spr"
version = "1.3.8-beta.1"
authors = ["Sven Over <sp@cedenti.st>", "Jozef Mokry <jozef.mokry@gmail.com>"]
description = "Submit pull requests for individual, amendable, rebaseable commits to GitHub"
repository = "https://github.com/spacedentist/spr"
homepage = "https://github.com/spacedentist/spr"
license = "MIT"
edition = "2024"
exclude = [".github", ".gitignore"]

[dependencies]
bytes = "1.10.1"
clap = { version = "^4.5.47", features = ["derive", "wrap_help"] }
color-eyre = "0.6.5"
console = "^0.16.1"
dialoguer = "^0.12.0"
env_logger = "0.11.8"
futures = "^0.3.31"
futures-lite = "^2.6.1"
git2 = { version = "^0.20.2", default-features = false, features = ["https"]}
git2-ext = "^0.6.3"
graphql_client = "^0.14.0"
http = "1.3.1"
http-body = "1.0.1"
indoc = "^2.0.6"
lazy-regex = "^3.4.1"
log = "0.4.28"
octocrab = { version = "^0.45.0", default-features = false, features = ["opentls", "default-client", "tokio"] }
open = "5.3.2"
secrecy = { version = "0.10.3", default-features = false }
serde = "^1.0.225"
textwrap = "^0.16.2"
tokio = { version = "^1.47.1", features = ["macros", "rt", "time"] }
unicode-normalization = "^0.1.24"
