[package]
name = "spr"
version = "1.3.6-beta.1"
authors = ["Sven Over <sven@cord.com>", "Jozef Mokry <jozef@cord.com>"]
description = "Submit pull requests for individual, amendable, rebaseable commits to GitHub"
repository = "https://github.com/getcord/spr"
homepage = "https://github.com/getcord/spr"
license = "MIT"
edition = "2021"
exclude = [".github", ".gitignore"]

[dependencies]
clap = { version = "^3.2.6", features = ["derive", "wrap_help"] }
console = "^0.15.0"
dialoguer = "^0.10.1"
futures = "^0.3.21"
futures-lite = "^1.12.0"
git2 = { version = "^0.17.2", default-features = false }
git2-ext = "0.6.0"
graphql_client = "^0.11.0"
indoc = "^1.0.3"
lazy-regex = "^2.2.2"
octocrab = { version = "^0.38.0", default-features = false, features = ["opentls", "default-client"] }
reqwest = { version = "^0.11.11", default-features = false, features = ["json", "rustls-tls"] }
serde = "^1.0.136"
textwrap = "0.15.0"
thiserror = "^1.0.30"
tokio = { version = "^1.19.2", features = ["macros", "process", "rt-multi-thread", "time"] }
unicode-normalization = "^0.1.19"
